# Combinatorial-Games-on-Graphs

./: .gitignore  README.md  cli.py  even_kernels.py  gf2_even_kernel.py  graphs.py  matching.py  nimber.py  old_functions.py  rust_matching.py  sweep4_results.txt  sweep5_results.txt  sweep6_results.txt  visualize.py
Adjacency_Listings/: Triangular Grid Graph Adjacency Listing (T13).txt  Triangular Grid Graph Adjacency Listing (T29).txt  Triangular Grid Graph Adjacency Listing (T5).txt
xblossom/: Cargo.toml  pyproject.toml
xblossom/src/: blossom.rs  graph.rs  lib.rs
